--- a/UI/Controls/StudentTestBrowser.xaml
+++ b/UI/Controls/StudentTestBrowser.xaml
@@ -1,29 +1,63 @@
-﻿<UserControl x:Class="UI.Controls.TestBrowser"
+﻿<UserControl x:Class="UI.Controls.StudentTestBrowser"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:UI.Controls"
+             xmlns:ViewModel="clr-namespace:UI.ViewModel" 
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        <Button Content="Log Out" Width="70" Height="20" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,5,5,0"/>
+    <UserControl.DataContext>
+        <ViewModel:StudentTestBrowserViewModel/>
+    </UserControl.DataContext>
+    
+    <UserControl.Resources>
+        <BooleanToVisibilityConverter x:Key="BoolToVis"/>
+
+        <DataTemplate x:Key="NameColumn">
+            <TextBlock Text="{Binding Name}"/>
+        </DataTemplate>
+
+        <DataTemplate x:Key="AttemptsColumn">
+            <TextBlock>
+                <TextBlock.Text>
+                    <MultiBinding StringFormat="{}{0} з {1}">
+                        <Binding Path="StudentAttemptCount"/>
+                        <Binding Path="MaxAttempts"/>
+                    </MultiBinding>
+                </TextBlock.Text>
+            </TextBlock>
+        </DataTemplate>
+
+        <DataTemplate x:Key="TerminColumn">
+            <TextBlock Visibility="{Binding HasTermin, Converter={StaticResource BoolToVis}}" 
+               Text="{Binding Termin, StringFormat='{}до {0:HH:mm dd.MM.yyyy}'}"/>
+        </DataTemplate>
+
+        <DataTemplate x:Key="LastAttemptStatusColumn">
+            <TextBlock Text="{Binding LastAttempt.Status}"/>
+        </DataTemplate>
+    </UserControl.Resources>
+    
+    <Grid VerticalAlignment="Top">
+        <Button Content="Log Out" Click="LogOut_Click" Width="70" Height="20" 
+                HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,5,5,0" />
         
-        <StackPanel HorizontalAlignment="Center" Margin="0,30,0,0">
-            <StackPanel Orientation="Horizontal">
-                <TextBox Text="Search..." MinWidth="250" Margin="0,0,5,0"/>
-                <Button Content="Search" Width="75"/>
+        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,30,0,0">
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,5">
+                <TextBox Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" MinWidth="250" Margin="0,0,5,0" KeyDown="Search_KeyDown"/>
+                <Button Content="Search" Command="{Binding SearchCommand}" Width="100" Margin="0,0,5,0"/>
+                <Button Content="Open details" Width="100" Click="GoToDetails_OnClick"/>
             </StackPanel>
-            <ListView Margin="0,5,0,0">
-                <ListViewItem>
-                    Dick
-                </ListViewItem>
-                <ListViewItem>
-                    Dick
-                </ListViewItem>
-                <ListViewItem>
-                    Dick
-                </ListViewItem>
+            <ListView ItemsSource="{Binding FilteredTests}" SelectedItem="{Binding SelectedTest}">
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn Header="Ім'я" Width="150" CellTemplate="{StaticResource NameColumn}"/>
+                        <GridViewColumn Header="Спроби" Width="100" CellTemplate="{StaticResource AttemptsColumn}"/>
+                        <GridViewColumn Header="Термін" Width="150" CellTemplate="{StaticResource TerminColumn}"/>
+                        <GridViewColumn Header="Статус останньої спроби" Width="150" CellTemplate="{StaticResource LastAttemptStatusColumn}"/>
+                        <!--<GridViewColumn Width="100" CellTemplate="{StaticResource DetailsButtonColumn}"/>-->
+                    </GridView>
+                </ListView.View>
             </ListView>
         </StackPanel>
     </Grid>
