--- a/UI/Controls/StudentTestBrowser.xaml
+++ b/UI/Controls/StudentTestBrowser.xaml
@@ -9,16 +9,16 @@
     <UserControl.DataContext>
         <ViewModel:StudentTestBrowserViewModel/>
     </UserControl.DataContext>
-    
+
     <UserControl.Resources>
         <BooleanToVisibilityConverter x:Key="BoolToVis"/>
 
         <DataTemplate x:Key="NameColumn">
-            <TextBlock Text="{Binding Name}"/>
+            <TextBlock HorizontalAlignment="Center" Text="{Binding Name}"/>
         </DataTemplate>
 
         <DataTemplate x:Key="AttemptsColumn">
-            <TextBlock>
+            <TextBlock HorizontalAlignment="Center">
                 <TextBlock.Text>
                     <MultiBinding StringFormat="{}{0} з {1}">
                         <Binding Path="StudentAttemptCount"/>
@@ -29,7 +29,7 @@
         </DataTemplate>
 
         <DataTemplate x:Key="TerminColumn">
-            <TextBlock Visibility="{Binding HasTermin, Converter={StaticResource BoolToVis}}" 
+            <TextBlock HorizontalAlignment="Center" Visibility="{Binding HasTermin, Converter={StaticResource BoolToVis}}" 
                Text="{Binding Termin, StringFormat='{}до {0:HH:mm dd.MM.yyyy}'}"/>
         </DataTemplate>
 
@@ -48,7 +48,7 @@
                 <Button Content="Search" Command="{Binding SearchCommand}" Width="100" Margin="0,0,5,0"/>
                 <Button Content="Open details" Width="100" Click="GoToDetails_OnClick"/>
             </StackPanel>
-            <ListView ItemsSource="{Binding FilteredTests}" SelectedItem="{Binding SelectedTest}">
+            <ListView ItemsSource="{Binding FilteredTests}" SelectedItem="{Binding SelectedTest}" HorizontalContentAlignment="Stretch">
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Header="Ім'я" Width="150" CellTemplate="{StaticResource NameColumn}"/>
