--- a/UI/App.xaml
+++ b/UI/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application x:Class="UI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:UI.Windows"
-             StartupUri="Windows/MainWindow.xaml">
+             xmlns:local="clr-namespace:UI.Views"
+             StartupUri="Views/MainWindowView.xaml">
     <Application.Resources>
          
     </Application.Resources>
