--- a/UI/Views/QuestionControl.xaml
+++ b/UI/Views/QuestionControl.xaml
@@ -1,14 +1,12 @@
-﻿<UserControl x:Class="UI.Controls.QuestionControl"
+﻿<UserControl x:Class="UI.Views.QuestionControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:UI.Controls" 
-             xmlns:viewmodel="clr-namespace:UI.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:QuestionViewModel}"
-             xmlns:datatemplates="clr-namespace:UI.DataTemplates"
+             xmlns:local="clr-namespace:UI.Views" 
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <UserControl.Resources>
+    <!--<UserControl.Resources>
         <DataTemplate x:Key="RadioButtonTemplate">
             <Border Margin="0,0,0,5" Padding="0,5,5,5" BorderBrush="#FF292929" BorderThickness="1">
                 <StackPanel Orientation="Horizontal">
@@ -23,12 +21,12 @@
                 </StackPanel>
             </Border>
         </DataTemplate>
-        <datatemplates:AnswerOptionTemplateSelector x:Key="ItemTemplateSelector"
+        --><!--<selectors:AnswerOptionTemplateSelector x:Key="ItemTemplateSelector"
                                     RadioButtonTemplate="{StaticResource RadioButtonTemplate}"
-                                    CheckBoxTemplate="{StaticResource CheckBoxTemplate}" />
-    </UserControl.Resources>
+                                    CheckBoxTemplate="{StaticResource CheckBoxTemplate}" />--><!--
+    </UserControl.Resources>-->
     <Grid>
-        <Grid.RowDefinitions>
+        <!--<Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition Height="1.5*"/>
         </Grid.RowDefinitions>
@@ -47,6 +45,6 @@
                     </Style>
                 </ListBox.ItemContainerStyle>
             </ListBox>
-        </StackPanel>
+        </StackPanel>-->
     </Grid>
 </UserControl>
